# eventstore-benchmarks

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: benchmark.yml
configs/: smoke-test.yaml
configs/scaling/: readers.yaml  writers.yaml
eventstore-docs/umadb/: umadb-client.md
python/: report_generator.py  requirements.txt
rust/: Cargo.toml
rust/adapters/axonserver/: Cargo.toml
rust/adapters/axonserver/src/: lib.rs
rust/adapters/dummy/: Cargo.toml
rust/adapters/dummy/src/: lib.rs
rust/adapters/eventsourcingdb/: Cargo.toml
rust/adapters/eventsourcingdb/src/: lib.rs
rust/adapters/kurrentdb/: Cargo.toml
rust/adapters/kurrentdb/src/: lib.rs
rust/adapters/kurrentdb/tests/: integration.rs
rust/adapters/umadb/: Cargo.toml
rust/adapters/umadb/src/: lib.rs
rust/adapters/umadb/tests/: integration.rs
rust/analytics/src/: templates.rs
rust/axonserver-client/: Cargo.toml  build.rs
rust/axonserver-client/protos/: dcb.proto
rust/axonserver-client/protos/axonclient/protos/: common.proto
rust/axonserver-client/src/: lib.rs
rust/bench-core/: Cargo.toml
rust/bench-core/src/: adapter.rs  container_stats.rs  lib.rs  metrics.rs  retry.rs  runner.rs  system_info.rs  workflow_strategy.rs  workload.rs
rust/bench-core/src/workflows/: concurrent_readers.rs  concurrent_writers.rs  mod.rs
rust/bench-core/src/workloads/: concurrent_readers.rs  concurrent_writers.rs  factory.rs  mod.rs  performance.rs
rust/bench-core/tests/: smoke.rs
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/testcontainers/: Cargo.toml
rust/testcontainers/src/: axonserver.rs  eventsourcingdb.rs  kurrentdb.rs  lib.rs  umadb.rs
scripts/: run_and_report.sh  sweep_writers.sh
workloads/: concurrent_readers.yaml  concurrent_writers.yaml
