[package]
name = "esbs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bench-core = { path = "../bench-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Adapters
dummy-adapter = { path = "../adapters/dummy" }
umadb-adapter = { path = "../adapters/umadb" }
kurrentdb-adapter = { path = "../adapters/kurrentdb" }
