[package]
name = "eventsourcingdb-adapter"
version = "0.1.0"
edition = "2021"
[dependencies]
anyhow = "1"
async-trait = "0.1"
bench-core = { path = "../../bench-core" }
bench-testcontainers = { path = "../../testcontainers" }
eventsourcingdb = "2.0"
futures = "0.3"
serde_json = "1"
testcontainers = "0.23"
tokio = { version = "1", features = ["time"] }
url = "2"
