[package]
name = "umadb-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
bench-core = { path = "../../bench-core" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
umadb-client = "0.1"
umadb-dcb = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
futures = "0.3"
